--- a/public/index-contact.html
+++ b/public/index-contact.html
@@ -14,7 +14,7 @@
         <link href="bower_components/flexslider/flexslider.css" rel="stylesheet">
         <link href="bower_components/lightbox2/dist/css/lightbox.css" rel="stylesheet">
         <link href="et-line-icons/style.css" rel="stylesheet">
-        <link href="css/animate.css" rel="stylesheet">        
+        <link href="css/animate.css" rel="stylesheet">
         <!--custom css file-->
         <link href="css/style.css" rel="stylesheet">
 
@@ -24,6 +24,7 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
           <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+
         <![endif]-->
     </head>
     <body data-spy="scroll">
@@ -78,16 +79,16 @@
                                         <div class="col-sm-12"> 
                                             <div class="row">
                                                 <div class="col-sm-12 margin-b-20">
-                                                    <input type="text" name="name" class="form-control" placeholder="Full Name...." />
+                                                    <input id="name" type="text" name="name" class="form-control" placeholder="Full Name...." />
                                                 </div>
                                                 <div class="col-sm-12 margin-b-20">
-                                                    <input type="text" name="email" class="form-control" placeholder="Email Address...." />
+                                                    <input id = "email"type="text" name="email" class="form-control" placeholder="Email Address...." />
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-sm-12">
-                                            <input name="password" type="password" class="form-control" placeholder="Password...."></input>
-                                            <input name="vpassword" type="password" class="form-control" placeholder="Verify Password...."></input>
+                                            <input id = "password"name="password" type="password" class="form-control" placeholder="Password...."></input>
+                                            <input id = "vpass" name="vpassword" type="password" class="form-control" placeholder="Verify Password...."></input>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -97,7 +98,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-sm-12 text-center">
-                                            <button type="submit" name="Register" class="btn btn-lg btn-skin btn-radius margin-b-20" onsubmit="reggie()">Register</button>
+                                            <button id="reggie" type="submit" name="Register" class="btn btn-lg btn-skin btn-radius margin-b-20">Register</button>
                                             <a href = '/signup'>Already a member click here?</a>
                                         </div>
                                     </div>
@@ -493,7 +494,7 @@
                                 <div class="row vertical-align-child">
 
                                     <div class="col-sm-6 hidden-xs animated fadeInLeft">
-                                        <img src="images/ipad.png" alt="" class="img-responsive"> 
+                                        <img src="images/ipad.png" alt="" class="img-responsive">
                                     </div>
                                     <div class="col-sm-5 col-sm-offset-1 text-left animated fadeInUp">
                                         <h1>UI/UX Design</h1>
@@ -512,7 +513,7 @@
                                         </p>
                                     </div>
                                     <div class="col-sm-6 hidden-xs animated fadeInRight">
-                                        <img src="images/mockup-1.png" alt="" class="img-responsive"> 
+                                        <img src="images/mockup-1.png" alt="" class="img-responsive">
                                     </div>
                                 </div>
                             </div><!--tab content end-->
@@ -520,7 +521,7 @@
                                 <div class="row vertical-align-child">
 
                                     <div class="col-sm-6 hidden-xs animated fadeInLeft">
-                                        <img src="images/wide_shot_1.png" alt="" class="img-responsive"> 
+                                        <img src="images/wide_shot_1.png" alt="" class="img-responsive">
                                     </div>
                                     <div class="col-sm-5 col-sm-offset-1 text-left animated fadeInUp">
                                         <h1>Web Development</h1>
@@ -665,6 +666,7 @@
         <script src="js/smoothscroll.js"></script>
         <script src="bower_components/wow/dist/wow.min.js"></script>
         <script src="bower_components/lightbox2/dist/js/lightbox.min.js" type="text/javascript"></script>
+        <script src="bower_components/axios/dist/axios.js"></script>
 
         <script src="js/modernizr.custom.97074.js" type="text/javascript"></script>
         <script src="js/parallax.min.js" type="text/javascript"></script>
@@ -682,6 +684,19 @@
             var headroom = new Headroom(myElement);
             // initialise
             headroom.init();
+        </script>
+        <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-auth.js">
+            <script>
+            // Initialize Firebase
+            var config = {
+                apiKey: "AIzaSyD4w4qZt8ikyOhfrC8-DudXZFdtbS2VVCE",
+                authDomain: "seniority-dea64.firebaseapp.com",
+                databaseURL: "https://seniority-dea64.firebaseio.com",
+                projectId: "seniority-dea64",
+                storageBucket: "seniority-dea64.appspot.com",
+                messagingSenderId: "1082630192144"
+            };
+            firebase.initializeApp(config);
         </script>
     </body>
 </html>
