--- a/public/index-contact.html
+++ b/public/index-contact.html
@@ -74,7 +74,7 @@
                         <div class="col-sm-5">
                             <div class="contact-home-form">
                                 <h3>Create a free account</h3>
-                                <form method="post" action="#" class="assan-contact">
+                                <div class="assan-contact">
                                     <div class="row">
                                         <div class="col-sm-12"> 
                                             <div class="row">
@@ -98,12 +98,12 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-sm-12 text-center">
-                                            <button id="reggie" type="submit" name="Register" class="btn btn-lg btn-skin btn-radius margin-b-20">Register</button>
+                                            <button id="reggie" name="Register" class="btn btn-lg btn-skin btn-radius margin-b-20">Register</button>
                                             <a href = '/signup'>Already a member click here?</a>
                                         </div>
                                     </div>
 
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -119,12 +119,6 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="fa fa-times"></span></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe id="vimeo-video" src="http://player.vimeo.com/video/57175742"></iframe>
-                        </div>
-
                     </div>
                 </div>
             </div>
@@ -671,11 +665,6 @@
         <script src="js/modernizr.custom.97074.js" type="text/javascript"></script>
         <script src="js/parallax.min.js" type="text/javascript"></script>
         <script src="js/custom.js" type="text/javascript"></script>
-        <!-- Vimeo video API -->
-        <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
-        <script type="text/javascript" src="js/vimeo.js"></script> 
-        <script src="contact_form/contact.js"></script>
-        <!-- Vimeo video API -->
         <script src="js/headroom.js" type="text/javascript"></script>
         <script>
             // grab an element
@@ -685,9 +674,8 @@
             // initialise
             headroom.init();
         </script>
-        <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-auth.js">
-            <script>
-            // Initialize Firebase
+        <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+        <script>
             var config = {
                 apiKey: "AIzaSyD4w4qZt8ikyOhfrC8-DudXZFdtbS2VVCE",
                 authDomain: "seniority-dea64.firebaseapp.com",
@@ -696,7 +684,12 @@
                 storageBucket: "seniority-dea64.appspot.com",
                 messagingSenderId: "1082630192144"
             };
-            firebase.initializeApp(config);
+            try{
+                firebase.initializeApp(config)
+                console.log('hit')
+            } catch(err){
+                console.log(err);
+            }
         </script>
     </body>
 </html>
