--- a/public/index-contact.html
+++ b/public/index-contact.html
@@ -17,7 +17,7 @@
         <link href="css/animate.css" rel="stylesheet">        
         <!--custom css file-->
         <link href="css/style.css" rel="stylesheet">
-
+        <script src="./bower_components/axios/dist/axios.js"></script>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -119,12 +119,12 @@
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="fa fa-times"></span></button>
                     </div>
-                    <div class="modal-body">
+                    <!--<div class="modal-body">
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe id="vimeo-video" src="http://player.vimeo.com/video/57175742"></iframe>
                         </div>
 
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -682,6 +682,18 @@
             var headroom = new Headroom(myElement);
             // initialise
             headroom.init();
+            // AXIOS EXAMPLE
+            // axios.post('/auth/signup/helpee', {
+            //     email: 'jakub@jakub.jakub',
+            //     password: 'fuck',
+            // })
+            // .then(() => {
+            //     axios.post('/auth/login/helpee', {
+            //         email: 'jakub@jakub.jakub',
+            //         password: 'fuck',
+            //     })
+            //     .then(res => console.log(res.data))
+            // })
         </script>
     </body>
 </html>
