--- a/public/login.html
+++ b/public/login.html
@@ -86,12 +86,14 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-12 text-center">
-                                    <button type="submit" name="submit" class="btn btn-lg btn-skin btn-radius margin-b-20">Login</button>
-                                    <p>Not a member? Click <a href="/register.html">here</a> to register!</p>
-                                </div>
+                                <p class=text-center>Login as...</p>
                             </div>
-
+                                <div class="btn-group">
+                                    <button type="submit" name="submit" class="btn btn-skin btn-radius">Helper</button>
+                                    <button type="submit" name="submit" class="btn btn-skin btn-radius">Helpee</button>
+                                </div>
+                                <p style="margin-top:10px; margin-bottom: -10px;">Not a member? Click <a href="/register.html">here</a> to register!</p>
+                            </div>
                         </form>
                     </div>
                 </div>
