--- a/public/register.html
+++ b/public/register.html
@@ -58,7 +58,6 @@
             </div><!--/.container-fluid -->
         </header><!--navigation end here-->
 
-
         <section id="home" class="home-contact">
             <div class="container">
                 <div class="col-md-10 col-md-offset-1">
@@ -98,9 +97,13 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-sm-12 text-center">
-                                            <button type="submit" id="Register" onclick="checkPasswords();" class="btn btn-lg btn-skin btn-radius margin-b-20" >Register</button>
-                                            <p>Already a member? Click <a href="/login.html">here!</a></p>
+                                            <p class=text-center>Register as...</p>
+                                        </div>
+                                            <div class="btn-group">
+                                                <button type="submit" id="Register" onsubmit="checkPasswords();" class="btn btn-med btn-skin btn-radius" >Helper</button>
+                                                <button type="submit" id="Register" onsubmit="checkPasswords();" class="btn btn-med btn-skin btn-radius" >Helpee</button>
+                                            </div>
+                                            <p style="margin-top:15px; margin-bottom: -10px;">Already a member? Click <a href="/login.html">here!</a></p>
                                         </div>
                                     </div>
                                 </form>
@@ -185,6 +188,11 @@
         <!-- Vimeo video API -->
         <script src="js/headroom.js" type="text/javascript"></script>
         <script>
+            $(document).ready(function() 
+            {
+                document.getElementById("contact-home-form").reset();
+            });
+
             function checkPasswords()
             {
                 let one = $("#password").val();
@@ -193,7 +201,8 @@
                     $("#chkpass").html("Passwords do not match! Try again.").css("color", "red");
                 else
                     $("#chkpass").html("Successfully registered!").css("color", "green");
-            }
+            };
+
         </script>
     </body>
 </html>
