update map and routes

--- a/public/register.html
+++ b/public/register.html
@@ -37,13 +37,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Seniority</a>
+                    <a class="navbar-brand" href="register.html">Seniority</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
 
                     <ul class="nav scroll-to navbar-nav"> 
                         <li class="active"><a href="home">home</a></li>
-                        <li><a href="find_help">Find Help</a></li>
+                        <li><a href="/map.html">Find Help</a></li>
                         <li><a href="help">Help</a></li>
                         <li><a href="login">Login</a></li>
 
@@ -103,7 +103,7 @@
                                                 <button type="submit" id="Register" onsubmit="checkPasswords();" class="btn btn-med btn-skin btn-radius" >Helper</button>
                                                 <button type="submit" id="Register" onsubmit="checkPasswords();" class="btn btn-med btn-skin btn-radius" >Helpee</button>
                                             </div>
-                                            <p style="margin-top:15px; margin-bottom: -10px;">Already a member? Click <a href="/login.html">here!</a></p>
+                                            <p style="margin-top:15px; margin-bottom: -10px;">Already a member? Click <a href="/login">here!</a></p>
                                         </div>
                                     </div>
                                 </form>
