--- a/public/map.html
+++ b/public/map.html
@@ -29,7 +29,7 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <![endif]-->
 </head>
 <body data-spy="scroll">
@@ -48,8 +48,8 @@
         <div id="navbar" class="navbar-collapse collapse">
 
             <ul class="nav scroll-to navbar-nav">
-                <li class="active"><a href="register.html">home</a></li>
-                <li><a href="find_help">Find Help</a></li>
+                <li ><a href="register.html">home</a></li>
+                <li class="active"><a href="/map.html">Find Help</a></li>
                 <li><a href="help">Help</a></li>
                 <li><a href="login">Login</a></li>
 
@@ -69,9 +69,43 @@
     <div class="container">
         <div class="col-md-12">
                     <h3 class="text-center">Nearby Help</h3>
-                        <div id="map"></div>
-                            </div>
+                        <div id="map">
                         </div>
+            <div id = 'prof'class="btn btn-danger" type="button" class="btn btn-info btn-lg"  style="border-radius: 25px; margin-left: 45%; width: 20%; margin-top: 10px; height: 60px; line-height: 55px; font-size: 20px "> Find Help </div>
+                            </div>
+
+                        </div>
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">NAME OF CHILD</h4>
+                </div>
+                <div class="modal-body">
+                    <h2>Profile</h2>
+
+                    <div>
+                    <img src="images/prof.jpg" style="border-radius: 50%; height: 150px; width: 150px;">
+                    </div>
+                    <div><button type="button" class="btn btn-danger" data-dismiss="modal" style="margin-top: 10px; margin-left: 5%">Hire Help</button></div>
+                    <div style="margin-top: 10px; margin-left: 6%">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </section>
 
 <!--footer start-->
@@ -133,52 +167,60 @@
     var map, infoWindow;
 
     function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
+        var uluru = {lat:  39.9625980, lng: -76.7277450};
         map = new google.maps.Map(document.getElementById('map'), {
             zoom: 10,
             center: uluru
         });
         var marker = new google.maps.Marker({
-            position: uluru,
-            map: map
+            position: {lat: 39.9625982, lng: -76.7277452},
+            map: map,
+            icon: './images/man.png'
         });
         marker = new google.maps.Marker({
-            position: {lat: -26.363, lng: 132.044},
-            map: map
+            position: {lat: 40, lng: -76.8277455},
+            map: map,
+            icon: './images/grey.ico'
         });
-        infoWindow = new google.maps.InfoWindow;
+        var iconBase = 'https://maps.google.com/mapfiles/kml/shapes/';
+         marker = new google.maps.Marker({
+            position: {lat: 40.07, lng: -76.8277455},
+            map: map,
+            icon: './images/grey.ico'
+        });marker = new google.maps.Marker({
+            position: {lat: 40.08, lng: -76.8277455},
+            map: map,
+            icon: './images/grey.ico'
+        });marker = new google.maps.Marker({
+            position: {lat: 39.8, lng: -76.9277455},
+            map: map,
+            icon: './images/grey.ico'
+        });marker = new google.maps.Marker({
+            position: {lat: 40.10, lng: -76.8977455},
+            map: map,
+            icon: './images/grey.ico'
+        });marker = new google.maps.Marker({
+            position: {lat: 40.11, lng: -76.8777455},
+            map: map,
+            icon: './images/grey.ico'
+        });marker = new google.maps.Marker({
+            position: {lat: 40.15, lng: -76.8377455},
+            map: map,
+            icon: './images/grey.ico'
+        });marker = new google.maps.Marker({
+            position: {lat: 40.07, lng: -76.8277455},
+            map: map,
+            icon: './images/grey.ico'
+        });marker = new google.maps.Marker({
+            position: {lat: 40.07, lng: -76.8277455},
+            map: map,
+            icon: './images/grey.ico'
+        });marker = new google.maps.Marker({
+            position: {lat: 40.07, lng: -76.8277455},
+            map: map,
+            icon: './images/grey.ico'
+        });
 
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(function (position) {
-                var pos = {
-                    lat: position.coords.latitude,
-                    lng: position.coords.longitude
-                };
-
-                infoWindow.setPosition(pos);
-                infoWindow.setContent('Location found.');
-                infoWindow.open(map);
-                map.setCenter(pos);
-                var marker = new google.maps.Marker({
-                    position: pos,
-                    map: map
-                });
-
-            }, function () {
-                handleLocationError(true, infoWindow, map.getCenter());
-            });
-        } else {
-            console.log('fucked up')
-            // Browser doesn't support Geolocation
-            handleLocationError(false, infoWindow, map.getCenter());
-        }
-        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-            infoWindow.setPosition(pos);
-            infoWindow.setContent(browserHasGeolocation ?
-                    'Error: The Geolocation service failed.' :
-                    'Error: Your browser doesn\'t support geolocation.');
-            infoWindow.open(map);
-        }
     }
 
 </script>
