--- a/public/login.html
+++ b/public/login.html
@@ -17,6 +17,7 @@
     <link href="css/animate.css" rel="stylesheet">
     <!--custom css file-->
     <link href="css/style.css" rel="stylesheet">
+    <link href="bootstrap/strikethrough-radios/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -67,17 +68,17 @@
                 <div class="col-sm-5">
                     <div class="contact-home-form">
                         <h3>Login</h3>
-                        <form method="post" action="#" class="assan-contact">
+                        <div class="assan-contact">
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="row">
                                         <div class="col-sm-12 margin-b-20">
-                                            <input type="text" name="email" class="form-control" placeholder="Email Address...." />
+                                            <input type="text" id="email" class="form-control" placeholder="Email Address...." />
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
-                                    <input name="password" type="password" class="form-control" placeholder="Password...."></input>
+                                    <input id="password" type="password" class="form-control" placeholder="Password...."></input>
                                 </div>
                             </div>
                             <div class="row">
@@ -86,15 +87,19 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <p class=text-center>Login as...</p>
+                                <p class="woah text-center">
+                                    Login as...
+                                    <label><input type="radio" name="log" value="help" checked><span>helper</span></label>
+                                    <label><input type="radio" name="log" value="no"><span> helpee</span></label>
+                                </p>
                             </div>
-                                <div class="btn-group">
-                                    <button type="submit" name="submit" class="btn btn-skin btn-radius">Helper</button>
-                                    <button type="submit" name="submit" class="btn btn-skin btn-radius">Helpee</button>
+                            <div class="row">
+                                <div class="col-sm-12 text-center">
+                                    <button type="button" onclick="Helper()" name="submit" class="btn btn-lg btn-skin btn-radius margin-b-20">Login</button>
+                                    <p style="margin-top:10px; margin-bottom: -10px;">Not a member? Click <a href="/register.html">here</a> to register!</p>
                                 </div>
-                                <p style="margin-top:10px; margin-bottom: -10px;">Not a member? Click <a href="/register.html">here</a> to register!</p>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -156,7 +161,7 @@
             </div>
         </footer>
         <!--footer end-->
-
+<script src="bower_components/axios/dist/axios.js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js" type="text/javascript"></script>
 <script src="js/jquery.easing.1.3.min.js" type="text/javascript"></script>
@@ -165,7 +170,6 @@
 <script src="js/smoothscroll.js"></script>
 <script src="bower_components/wow/dist/wow.min.js"></script>
 <script src="bower_components/lightbox2/dist/js/lightbox.min.js" type="text/javascript"></script>
-
 <script src="js/modernizr.custom.97074.js" type="text/javascript"></script>
 <script src="js/parallax.min.js" type="text/javascript"></script>
 <script src="js/custom.js" type="text/javascript"></script>
@@ -176,6 +180,31 @@
 <!-- Vimeo video API -->
 <script src="js/headroom.js" type="text/javascript"></script>
 <script>
+    function Helper()
+    {
+        let e = $("#email").val();
+        let p = $("#password").val();
+        let rad = document.querySelector('input[name="log"]:checked').value;
+
+        if(rad == "help")
+        {
+            console.log("ayyy");
+            axios.post('auth/login/help', {
+                email: e,
+                password: p,
+            })
+                    .then(res => console.log(res.data));
+        }
+        else
+            {
+            axios.post('auth/login/nothelp', {
+                email: e,
+                password: p,
+            })
+                    .then(res => console.log(res.data)
+            );
+        }
+    }
 </script>
 </body>
 </html>
