--- a/public/register.html
+++ b/public/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +15,10 @@
         <link href="bower_components/flexslider/flexslider.css" rel="stylesheet">
         <link href="bower_components/lightbox2/dist/css/lightbox.css" rel="stylesheet">
         <link href="et-line-icons/style.css" rel="stylesheet">
-        <link href="css/animate.css" rel="stylesheet">        
+        <link href="css/animate.css" rel="stylesheet">
         <!--custom css file-->
         <link href="css/style.css" rel="stylesheet">
+        <link href="bootstrap/strikethrough-radios/css/style.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -72,15 +74,15 @@
                         <div class="col-sm-5">
                             <div class="contact-home-form">
                                 <h3>Create a free account</h3>
-                                <form method="post" action="#" class="assan-contact">
+                                <div class="assan-contact">
                                     <div class="row">
                                         <div class="col-sm-12"> 
                                             <div class="row">
                                                 <div class="col-sm-12 margin-b-20">
-                                                    <input type="text" name="name" class="form-control" placeholder="Full Name...." />
+                                                    <input type="text" id="fullname" class="form-control" placeholder="Full Name...." />
                                                 </div>
                                                 <div class="col-sm-12 margin-b-20">
-                                                    <input type="text" name="email" class="form-control" placeholder="Email Address...." />
+                                                    <input type="text" id="email" class="form-control" placeholder="Email Address...." />
                                                 </div>
                                             </div>
                                         </div>
@@ -97,16 +99,19 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                            <p class=text-center>Register as...</p>
-                                        </div>
-                                            <div class="btn-group">
-                                                <button type="submit" id="Register" onsubmit="checkPasswords();" class="btn btn-med btn-skin btn-radius" >Helper</button>
-                                                <button type="submit" id="Register" onsubmit="checkPasswords();" class="btn btn-med btn-skin btn-radius" >Helpee</button>
-                                            </div>
+                                        <p class="woah text-center">
+                                            Register as...
+                                            <label><input type="radio" name="signup" value="help" checked><span>helper</span></label>
+                                            <label><input type="radio" name="signup" value="no"><span> helpee</span></label>
+                                        </p>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12 text-center">
+                                            <button type="button" onclick="Helper()" class="btn btn-lg btn-skin btn-radius margin-b-20">Register</button>
                                             <p style="margin-top:15px; margin-bottom: -10px;">Already a member? Click <a href="/login.html">here!</a></p>
                                         </div>
                                     </div>
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -168,7 +173,7 @@
             </div>
         </footer>
         <!--footer end-->
-
+        <script src="bower_components/axios/dist/axios.js"></script>
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="js/jquery-migrate.min.js" type="text/javascript"></script>
         <script src="js/jquery.easing.1.3.min.js" type="text/javascript"></script>
@@ -177,7 +182,6 @@
         <script src="js/smoothscroll.js"></script>
         <script src="bower_components/wow/dist/wow.min.js"></script>
         <script src="bower_components/lightbox2/dist/js/lightbox.min.js" type="text/javascript"></script>
-
         <script src="js/modernizr.custom.97074.js" type="text/javascript"></script>
         <script src="js/parallax.min.js" type="text/javascript"></script>
         <script src="js/custom.js" type="text/javascript"></script>
@@ -188,20 +192,42 @@
         <!-- Vimeo video API -->
         <script src="js/headroom.js" type="text/javascript"></script>
         <script>
-            $(document).ready(function() 
+            function Helper()
             {
-                document.getElementById("contact-home-form").reset();
-            });
+                let n = $("#fullname").val();
+                let e = $("#email").val();
+                let p = $("#password").val();
+                let vp = $("#vpassword").val();
+                let rad = document.querySelector('input[name="signup"]:checked').value;
 
-            function checkPasswords()
-            {
-                let one = $("#password").val();
-                let two = $("#vpassword").val();
-                if (one != null && two != null && one != two)
+                if(p != vp)
+                {
                     $("#chkpass").html("Passwords do not match! Try again.").css("color", "red");
+                }
                 else
-                    $("#chkpass").html("Successfully registered!").css("color", "green");
-            };
+                {
+                    if(rad == "help")
+                    {
+                        axios.post('auth/signup/help', {
+                            name: n,
+                            email: e,
+                            password: p,
+                        })
+                                .then(res => console.log(res.data)
+                    );
+                    }
+                    else
+                    {
+                        axios.post('auth/signup/nothelp', {
+                            name: n,
+                            email: e,
+                            password: p,
+                        })
+                                .then(res => console.log(res.data)
+                        );
+                    }
+                }
+            }
 
         </script>
     </body>
