routes and started socket

--- a/public/login.html
+++ b/public/login.html
@@ -37,12 +37,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index-contact.html">Seniority</a>
+            <a class="navbar-brand" href="register">Seniority</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
             <ul class="nav scroll-to navbar-nav">
-                <li class="active"><a href="/seniority/public/index-contact.html">home</a></li>
+                <li class="active"><a href="register">home</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right socials">
                 <li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -96,7 +96,7 @@
                             <div class="row">
                                 <div class="col-sm-12 text-center">
                                     <button type="button" onclick="Helper()" name="submit" class="btn btn-lg btn-skin btn-radius margin-b-20">Login</button>
-                                    <p style="margin-top:10px; margin-bottom: -10px;">Not a member? Click <a href="/register.html">here</a> to register!</p>
+                                    <p style="margin-top:10px; margin-bottom: -10px;">Not a member? Click <a href="/register">here</a> to register!</p>
                                 </div>
                             </div>
                         </div>
