--- a/public/map.html
+++ b/public/map.html
@@ -43,13 +43,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Seniority</a>
+            <a class="navbar-brand" href="register">Seniority</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
             <ul class="nav scroll-to navbar-nav">
-                <li ><a href="register.html">home</a></li>
-                <li class="active"><a href="/map.html">Find Help</a></li>
+                <li ><a href="register">home</a></li>
+                <li class="active"><a href="map">Find Help</a></li>
                 <li><a href="help">Help</a></li>
                 <li><a href="login">Login</a></li>
 
