--- a/public/register.html
+++ b/public/register.html
@@ -39,13 +39,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="register.html">Seniority</a>
+                    <a class="navbar-brand" href="register">Seniority</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
 
                     <ul class="nav scroll-to navbar-nav"> 
-                        <li class="active"><a href="home">home</a></li>
-                        <li><a href="/map.html">Find Help</a></li>
+                        <li class="active"><a href="register">home</a></li>
+                        <li><a href="/map">Find Help</a></li>
                         <li><a href="help">Help</a></li>
                         <li><a href="login">Login</a></li>
 
