--- a/public/requestSend.html
+++ b/public/requestSend.html
@@ -37,13 +37,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Seniority</a>
+                    <a class="navbar-brand" href="register">Seniority</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
 
                     <ul class="nav scroll-to navbar-nav"> 
-                        <li class="active"><a href="home">home</a></li>
-                        <li><a href="find_help">Find Help</a></li>
+                        <li class="active"><a href="register">home</a></li>
+                        <li><a href="map">Find Help</a></li>
                         <li><a href="help">Help</a></li>
                         <li><a href="login">Login</a></li>
 
@@ -100,7 +100,7 @@
                                     <div class="row">
                                         <div class="col-sm-12 text-center">
                                             <button type="submit" id="Register" onclick="checkPasswords();" class="btn btn-lg btn-skin btn-radius margin-b-20" >Register</button>
-                                            <p>Already a member? Click <a href="/login.html">here!</a></p>
+                                            <p>Already a member? Click <a href="/login">here!</a></p>
                                         </div>
                                     </div>
                                 </form>
