--- a/public/register.html
+++ b/public/register.html
@@ -64,14 +64,14 @@
             <div class="container">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="row">
-                        <div class="col-sm-7">
+                        <div class="col-sm-4">
                             <div class="contact-home-text">
-                                <h4>Find local help</h4>
+                                <h4 style="font-weight: bolder; font-size: 33px;text-shadow: black 0px 0px 10px;">Find local help</h4>
                                 <h1></h1>
-                                <p>Fast and simple help for seniors</p>
+                                <p class="text-center" style="font-weight: bolder; font-size: 20px;text-shadow: black 0px 0px 10px;">Fast and simple help for seniors</p>
                             </div>
                         </div>
-                        <div class="col-sm-5">
+                        <div class="col-sm-8">
                             <div class="contact-home-form">
                                 <h3>Create a free account</h3>
                                 <div class="assan-contact">
