--- a/public/helper.html
+++ b/public/helper.html
@@ -74,7 +74,7 @@
             <div style="margin-left: 45%">
             <div class="switch">
                 <input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
-                <label for="cmn-toggle-1" style="line-height: 150px; class="text-center">Available?</label>
+                <label for="cmn-toggle-1" style="line-height: 150px;" class="text-center">Available?</label>
             </div>
             </div>
         </div>
