--- a/public/register.html
+++ b/public/register.html
@@ -174,6 +174,7 @@
         </footer>
         <!--footer end-->
         <script src="bower_components/axios/dist/axios.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="js/jquery-migrate.min.js" type="text/javascript"></script>
         <script src="js/jquery.easing.1.3.min.js" type="text/javascript"></script>
@@ -192,6 +193,10 @@
         <!-- Vimeo video API -->
         <script src="js/headroom.js" type="text/javascript"></script>
         <script>
+            var socket = io()
+            socket.on('ye', () => {
+                console.log('fuck')
+            })
             function Helper()
             {
                 let n = $("#fullname").val();
@@ -213,8 +218,11 @@
                             email: e,
                             password: p,
                         })
-                                .then(res => console.log(res.data)
-                    );
+                            .then(res =>{
+                                console.log(res.data);
+                                window.location.href = "/helper"
+                            })
+                       
                     }
                     else
                     {
@@ -223,8 +231,10 @@
                             email: e,
                             password: p,
                         })
-                                .then(res => console.log(res.data)
-                        );
+                            .then(res =>{
+                                console.log(res.data);
+                                window.location.href = "/map"
+                            })
                     }
                 }
             }
