--- a/public/register.html
+++ b/public/register.html
@@ -108,7 +108,7 @@
                                     <div class="row">
                                         <div class="col-sm-12 text-center">
                                             <button type="button" onclick="Helper()" class="btn btn-lg btn-skin btn-radius margin-b-20">Register</button>
-                                            <p style="margin-top:15px; margin-bottom: -10px;">Already a member? Click <a href="/login.html">here!</a></p>
+                                            <p style="margin-top:15px; margin-bottom: -10px;">Already a member? Click <a href="/login">here!</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -118,6 +118,112 @@
                 </div>
             </div>
         </section>
+                <hr>
+                <div class="space-40"></div>
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2 center-title">
+                        <i class="icon-quote"></i>
+                        <h2>Testimonials</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias.</p>
+                    </div>
+                </div><!--center title row end-->
+                <div class="row">
+                    <div class="col-sm-6 ">
+                        <div class="testi-box left clearfix wow animated fadeInDown" data-wow-delay="0.1s">
+                            <span class="thumb">
+                                <img src="images/t-1.jpg" class="img-circle img-responsive" alt="">
+                            </span>
+                            <div class="testi-text">
+                                <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias. "</p>
+                                <h4>John Doe</h4>
+                                <span class="rating">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-half-empty"></i>
+                                </span>
+                            </div>
+                        </div><!--testi box end-->
+                        <div class="testi-box left clearfix wow animated fadeInDown" data-wow-delay="0.2s">
+                            <span class="thumb">
+                                <img src="images/t-2.jpg" class="img-circle img-responsive" alt="">
+                            </span>
+                            <div class="testi-text">
+                                <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias. "</p>
+                                <h4>John Doe</h4>
+                                <span class="rating">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-half-empty"></i>
+                                </span>
+                            </div>
+                        </div><!--testi box end-->
+                    </div><!--col end-->
+                    <div class="col-sm-6 ">
+                        <div class="testi-box right clearfix wow animated fadeInDown" data-wow-delay="0.3s">
+                            <span class="thumb">
+                                <img src="images/t-2.jpg" class="img-circle img-responsive" alt="">
+                            </span>
+                            <div class="testi-text">
+                                <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias. "</p>
+                                <h4>John Doe</h4>
+                                <span class="rating">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-half-empty"></i>
+                                </span>
+                            </div>
+                        </div><!--testi box end-->
+                        <div class="testi-box right clearfix wow animated fadeInDown" data-wow-delay="0.4s">
+                            <span class="thumb">
+                                <img src="images/t-1.jpg" class="img-circle img-responsive" alt="">
+                            </span>
+                            <div class="testi-text">
+                                <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias. "</p>
+                                <h4>John Doe</h4>
+                                <span class="rating">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-half-empty"></i>
+                                </span>
+                            </div>
+                        </div><!--testi box end-->
+                    </div><!--col end-->
+                </div>
+            </div>
+        </section>
+        <!--section features end-->
+
+
+
+
+
+        <div class="clients">
+            <div class="container">
+                <ul class="list-inline text-center">
+                    <li><a href="#">
+                    </a></li>
+                    <li><a href="#">
+                    </a></li>
+                    <li><a href="#">
+                    </a></li>
+                    <li><a href="#">
+
+                    </a></li>
+                    <li><a href="#">
+
+                    </a></li>
+                </ul>
+            </div>
+        </div>
+
 
         <!--footer start-->
         <footer class="footer">
