--- a/public/login.html
+++ b/public/login.html
@@ -65,13 +65,13 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="contact-home-text">
-                        <h4 style="text-shadow: black 0px 0px 10px; font-size: 33px;">Find local help</h4>
+                        <h4 style="text-shadow: black 0px 0px 10px; font-size: 33px; font-weight: bolder">Find local help</h4>
                         <h1></h1>
-                        <p style="text-shadow: black 0px 0px 10px; font-size: 20px">Fast and <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">simple</a> help for seniors</p>
+                        <p style="text-shadow: black 0px 0px 10px; font-size: 20px; font-weight: bolder">Fast and <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">simple</a> help for seniors</p>
                     </div>
                 </div>
                 <div class="col-sm-8">
-                    <div class="contact-home-form">
+                    <div class="contact-home-form" style=" min-width: 200px">
                         <h3>Login</h3>
                         <div class="assan-contact">
                             <div class="row">
