--- a/public/map.html
+++ b/public/map.html
@@ -70,7 +70,7 @@
         <div class="col-md-12">
                     <h3 class="text-center">Nearby Help</h3>
                 <div class="map" id="map"></div>
-            <div id = 'prof'class="btn btn-danger" type="button" class="btn btn-info btn-lg"  style="border-radius: 25px; margin-left: 45%; width: 20%; margin-top: 10px; height: 60px; line-height: 55px; font-size: 20px "> Find Help </div>
+            <div id="prof" class="btn btn-danger" type="button" class="btn btn-info btn-lg"  style="border-radius: 25px; margin-left: 45%; width: 20%; margin-top: 10px; height: 60px; line-height: 55px; font-size: 20px "> Find Help </div>
                             </div>
 
                         </div>
@@ -195,7 +195,8 @@
 <script src="js/smoothscroll.js"></script>
 <script src="bower_components/wow/dist/wow.min.js"></script>
 <script src="bower_components/lightbox2/dist/js/lightbox.min.js" type="text/javascript"></script>
-
+<script src="/socket.io/socket.io.js"></script>
+<script src="socket_utils.js" type="text/javascript"></script>
 <script src="js/modernizr.custom.97074.js" type="text/javascript"></script>
 <script src="js/parallax.min.js" type="text/javascript"></script>
 <script src="js/custom.js" type="text/javascript"></script>
