--- a/public/register.html
+++ b/public/register.html
@@ -297,6 +297,7 @@
         <!-- Vimeo video API -->
         <script src="js/headroom.js" type="text/javascript"></script>
         <script>
+            var socket = io();
              window.onload = function() {
                 axios.get('/auth/me', function(req, res, next){
                     let user = res.data;
@@ -304,7 +305,7 @@
                 })
                         .then(user =>
                 {
-                    if(!user)
+                    if(user)
                 {
                     $("#loginLogout").html('Login');
                 }
@@ -346,8 +347,9 @@
                             password: p,
                         })
                             .then(res =>{
+                                socket.emit('signedIn', res.data)
                                 console.log(res.data);
-                                window.location.href = "/helper"
+                                window.location.href = "/helper";
                             })
                        
                     }
@@ -359,6 +361,7 @@
                             password: p,
                         })
                             .then(res =>{
+                                socket.emit('signedIn', res.data)
                                 console.log(res.data);
                                 window.location.href = "/map"
                             })
