--- a/public/getHelp.html
+++ b/public/getHelp.html
@@ -41,11 +41,11 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
 
-                    <ul class="nav scroll-to navbar-nav"> 
-                        <li class="active"><a href="register">home</a></li>
-                        <li><a href="map">Find Help</a></li>
-                        <li><a href="help">Help</a></li>
-                        <li><a href="login">Login</a></li>
+                    <ul class="nav scroll-to navbar-nav">
+                        <li><a href="/register">home</a></li>
+                        <li><a href="/map">Find Help</a></li>
+                        <li><a href="/help">Help</a></li>
+                        <li><a></a></li>
 
 
                     </ul>
