--- a/public/register.html
+++ b/public/register.html
@@ -44,10 +44,10 @@
                 <div id="navbar" class="navbar-collapse collapse">
 
                     <ul class="nav scroll-to navbar-nav">
-                        <li class="active"><a href="/home">home</a></li>
+                        <li><a href="/register">home</a></li>
                         <li><a href="/map">Find Help</a></li>
                         <li><a href="/help">Help</a></li>
-                        <li><button type="button" onclick="logMeOut()" id="loginLogout"></button></li>
+                        <li><a></a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right socials">
                         <li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -68,7 +68,6 @@
                                 <h1></h1>
                                 <p  style="font-weight: bolder; font-size: 20px;text-shadow: black 0px 0px 10px;">Fast and simple help for seniors</p>
                             </div>
-                        </div>
                         </div>
                         <div class="row"></div>
                         <div class="col-sm-12"style="margin-top:-8%">
@@ -101,7 +100,7 @@
                                     <div class="row">
                                         <p class="woah text-center">
                                             Register as...
-                                            <label style="padding-right:2px;"><input type="radio" name="signup" value="help" checked><span>helper</span></label>
+                                            <label><input type="radio" name="signup" value="help" checked><span>helper</span></label>
                                             <label><input type="radio" name="signup" value="no"><span> helpee</span></label>
                                         </p>
                                     </div>
