--- a/public/helper.html
+++ b/public/helper.html
@@ -49,10 +49,10 @@
         <div id="navbar" class="navbar-collapse collapse">
 
             <ul class="nav scroll-to navbar-nav">
-                <li ><a href="register.html">home</a></li>
-                <li class="active"><a href="/map.html">Find Help</a></li>
-                <li><a href="help">Help</a></li>
-                <li><a href="login">Login</a></li>
+                <li><a href="/register">home</a></li>
+                <li><a href="/map">Find Help</a></li>
+                <li><a href="/help">Help</a></li>
+                <li><a></a></li>
 
 
             </ul>
