--- a/public/helperInfo.html
+++ b/public/helperInfo.html
@@ -43,10 +43,10 @@
         <div id="navbar" class="navbar-collapse collapse">
 
             <ul class="nav scroll-to navbar-nav">
-                <li class="active"><a href="home">home</a></li>
+                <li><a href="/register">home</a></li>
                 <li><a href="/map">Find Help</a></li>
-                <li><a href="help">Help</a></li>
-                <li><a href="login">Login</a></li>
+                <li><a href="/help">Help</a></li>
+                <li><a></a></li>
 
 
             </ul>
