--- a/public/login.html
+++ b/public/login.html
@@ -44,7 +44,10 @@
             <div id="navbar" class="navbar-collapse collapse">
 
                 <ul class="nav scroll-to navbar-nav">
-                    <li class="active"><a href="register">home</a></li>
+                    <li><a href="/register">home</a></li>
+                    <li><a href="/map">Find Help</a></li>
+                    <li><a href="/help">Help</a></li>
+                    <li><a></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right socials">
                     <li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -61,17 +64,18 @@
 
 <section id="home" class="home-contact">
     <div class="container">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12 col-md-offset-1">
             <div class="row">
-                <div class="col-sm-10">
-                    <div class="contact-home-text"   style="  margin-left: -23%;">
-                        <h4 style="text-shadow: black 0px 0px 10px; font-size: 33px; font-weight: bolder">Find local help</h4>
+                <div class="col-sm-12">
+                    <div class="contact-home-text" style="margin-left: 15px">
+                        <h4 style="font-weight: bolder; font-size: 33px;text-shadow: black 0px 0px 10px;">Find local help</h4>
                         <h1></h1>
-                        <p style="text-shadow: black 0px 0px 10px; font-size: 20px; font-weight: bolder">Fast and <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">simple</a> help for seniors</p>
+                        <p  style="font-weight: bolder; font-size: 20px;text-shadow: black 0px 0px 10px;">Fast and simple help for seniors</p>
                     </div>
                 </div>
-                <div class="col-sm-12">
-                    <div class="contact-home-form" style=" min-width: 200px; margin-top: -10%;margin-left: -25%;">
+                <div class="row"></div>
+                <div class="col-sm-12"style="margin-top:-8%">
+                    <div class="contact-home-form">
                         <h3>Login</h3>
                         <div class="assan-contact">
                             <div class="row">
@@ -80,10 +84,10 @@
                                         <div class="col-sm-12 margin-b-20">
                                             <input type="text" id="email" class="form-control" placeholder="Email Address...." />
                                         </div>
+                                    <div class="col-sm-12 margin-b-20">
+                                        <input id="password" type="password" class="form-control" placeholder="Password...." />
                                     </div>
-                                    <div class="col-sm-12">
-                                        <input id="password" type="password" class="form-control" placeholder="Password...."></input>
-                                    </div>
+                                </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-12 text-center">
@@ -101,11 +105,11 @@
                                 <div class="row">
                                     <div class="col-sm-12 text-center">
                                         <button type="button" onclick="Helper()" name="submit" class="btn btn-lg btn-skin btn-radius margin-b-20">Login</button>
-                                        <p style="margin-top:10px; margin-bottom: -10px;">Not a member? Click <a href="/register">here</a> to register!</p>
+                                        <p style="margin-top:15px; margin-bottom: -10px;">Not a member? Click <a href="/register">here</a> to register!</p>
                                     </div>
                             </div>
                            
-                          
+                          </div>
                         </div>
                     </div>
                 </div>
