--- a/public/login.html
+++ b/public/login.html
@@ -67,14 +67,14 @@
         <div class="col-md-12 col-md-offset-1">
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="contact-home-text" style="margin-left: 15px">
+                    <div class="contact-home-text" style="margin-left: -9%">
                         <h4 style="font-weight: bolder; font-size: 33px;text-shadow: black 0px 0px 10px;">Find local help</h4>
                         <h1></h1>
                         <p  style="font-weight: bolder; font-size: 20px;text-shadow: black 0px 0px 10px;">Fast and simple help for seniors</p>
                     </div>
                 </div>
                 <div class="row"></div>
-                <div class="col-sm-12"style="margin-top:-8%">
+                <div class="col-sm-12"style="margin-top:-8%; margin-left: -20%">
                     <div class="contact-home-form">
                         <h3>Login</h3>
                         <div class="assan-contact">
