--- a/public/register.html
+++ b/public/register.html
@@ -348,8 +348,8 @@
                             password: p,
                         })
                             .then(res =>{
-                                socket.emit('signedIn', res.data)
-                                console.log(res.data);
+                                socket.emit('signedIn', { id: res.data.id, helper: true })
+                                console.log({ id: res.data.id, helper: true });
                                 window.location.href = "/helper";
                             })
                        
@@ -362,8 +362,8 @@
                             password: p,
                         })
                             .then(res =>{
-                                socket.emit('signedIn', res.data)
-                                console.log(res.data);
+                                socket.emit('signedIn', { id: res.data.id, helper: false })
+                                console.log({ id: res.data.id, helper: false });
                                 window.location.href = "/map"
                             })
                     }
