--- a/public/login.html
+++ b/public/login.html
@@ -174,6 +174,7 @@
         </div>
     </footer>
     <!--footer end-->
+    <script src="/socket.io/socket.io.js"></script>
     <script src="bower_components/axios/dist/axios.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="js/jquery-migrate.min.js" type="text/javascript"></script>
@@ -193,6 +194,7 @@
     <!-- Vimeo video API -->
     <script src="js/headroom.js" type="text/javascript"></script>
     <script>
+        var socket = io()
           window.onload = function() {
               axios.get('/auth/me', function(req, res, next){
                   let user = res.data;
@@ -217,6 +219,7 @@
                     password: p,
                 })
                     .then(res => {
+                        socket.emit('signedIn', { id: res.data.id, helper: true })
                         console.log(res.data);
                         window.location.href = "/helper"
                     })
@@ -227,6 +230,7 @@
                     password: p,
                 })
                     .then(res => {
+                        socket.emit('signedIn',{ id: res.data.id, helper: false })
                         console.log(res.data);
                         window.location.href = "/map"
                     })
