--- a/public/map.html
+++ b/public/map.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <style>
         #map {
@@ -32,52 +33,54 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <![endif]-->
 </head>
+
 <body data-spy="scroll">
-<!-- Static navbar -->
-<header class="navbar navbar-default header-v2 navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header scroll-to">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+    <!-- Static navbar -->
+    <header class="navbar navbar-default header-v2 navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header scroll-to">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="register">Seniority</a>
+                <a class="navbar-brand" href="register">Seniority</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+
+                <ul class="nav scroll-to navbar-nav">
+                    <li><a href="/register">home</a></li>
+                    <li><a href="/map">Find Help</a></li>
+                    <li><a href="/help">Help</a></li>
+                    <li><a></a></li>
+
+
+                </ul>
+                <ul class="nav navbar-nav navbar-right socials">
+                    <li><a href="#"><i class="icon-facebook"></i></a></li>
+                    <li><a href="#"><i class="icon-twitter"></i></a></li>
+                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-
-            <ul class="nav scroll-to navbar-nav">
-                <li><a href="/register">home</a></li>
-                <li><a href="/map">Find Help</a></li>
-                <li><a href="/help">Help</a></li>
-                <li><a></a></li>
+        <!--/.container-fluid -->
+    </header>
+    <!--navigation end here-->
 
 
-            </ul>
-            <ul class="nav navbar-nav navbar-right socials">
-                <li><a href="#"><i class="icon-facebook"></i></a></li>
-                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                <li><a href="#"><i class="icon-linkedin"></i></a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
-    </div><!--/.container-fluid -->
-</header><!--navigation end here-->
-
-
-<section id="home" class="home-contact">
-    <div class="container">
-        <div class="col-md-12">
-                    <h3 class="text-center">Nearby Help</h3>
+    <section id="home" class="home-contact">
+        <div class="container">
+            <div class="col-md-12">
+                <h3 class="text-center">Nearby Help</h3>
                 <div class="map" id="map"></div>
-            <div id="prof" class="btn btn-danger" type="button" class="btn btn-info btn-lg"  style="border-radius: 25px; margin-left: 45%; width: 20%; margin-top: 10px; height: 60px; line-height: 55px; font-size: 20px "> Find Help </div>
-                            </div>
+                <div id="prof" class="btn btn-danger" type="button" class="btn btn-info btn-lg" style="border-radius: 25px; margin-left: 45%; width: 20%; margin-top: 10px; height: 60px; line-height: 55px; font-size: 20px ">
+                Find Help </div>
+            </div> 
 
-                        </div>
-    <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
+        </div>
+        <!--<div id="helperModal" class="modal fade" role="dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -87,11 +90,31 @@
                     <h2 class="text-center">Profile</h2>
 
                     <div class="text-center">
-                    <img src="images/prof.jpg" style="border-radius: 50%; height: 150px; width: 150px;">
+                        <img src="images/prof.jpg" style="border-radius: 50%; height: 150px; width: 150px;">
                     </div>
+                    <div class="col-md-5">
+                        <div style="margin-top: 10px; margin-left: 6%">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
 
-                    <div class="container text-center " style="margin-left: 3%">
-                        <div class="col-md-5">
+                    </div>
+        </div>-->
+            <div id="theirModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Job Available</h4>
+                        </div>
+                        <div class="modal-body">
+                            <h2 id="helperName"></h2>
+                            <div>
+                                <img src="images/prof.jpg" style="border-radius: 50%; height: 150px; width: 150px;">
+                            </div>
                             <div style="margin-top: 10px; margin-left: 6%">
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -99,6 +122,23 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                             </div>
+                            <div><label id="minutes">00</label>:<label id="seconds">00</label></div>
+                            <div>$<label id="money">0.00</label> </div>
+                            <h3 id="jobHead"></h3>
+                            <p id="jobDesc"></p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">End This Job</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                        <div style="border-radius: 3px; margin-left: 3%">
                             <div class="form-area" style="margin-left: 6%;">
 
                                 <form role="form">
@@ -108,150 +148,149 @@
                                         <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
                                     </div>
                                     <div class="form-group">
-                                        <textarea class="form-control" type="textarea" id="message" placeholder="Short Description of Help needed" maxlength="140" rows="7"></textarea>
+                                        <textarea class="form-control" type="textarea" id="message" placeholder="Short Description of Help needed" maxlength="140"
+                                            rows="7"></textarea>
                                         <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>
                                     </div>
 
-                                    <button type="button" id="submit" name="submit" class="btn btn-danger pull-right"data-dismiss="modal">Get Help</button>
+                                    <button type="button" id="submit" name="submit" onclick="helpHandler()" class="btn btn-danger pull-right" data-dismiss="modal">Get Help</button>
                                 </form>
                             </div>
                         </div>
-                    </div>
-
                 </div>
-                <div class="modal-footer">
-
             </div>
+    </section>
 
-        </div>
-    </div>
-</section>
-
-<!--footer start-->
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 margin-b-30">
-                <h2>Seniority</h2>
-                <p>
-                    A simple connection between the ones who need help, and that ones that want to help.
-                </p>
-                <div class="space-20"></div>
-            </div>
-            <div class="col-sm-4 margin-b-30">
-                <h2>Contact us</h2>
-                <ul class="list-unstyled clearfix">
-                    <li class="clearfix">
-                        <i class="fa fa-map-marker"></i>
-                        <span>777 W Harrisburg Pike, Middletown, PA 17057</span>
-                    </li>
-                    <li class="clearfix">
-                        <i class="fa fa-envelope-o"></i>
-                        <span><a href='#'>seniorityPSH@gmail.com</a></span>
-                    </li>
-                    <li class="clearfix">
-                        <i class="fa fa-phone"></i>
-                        <span>(717)-948-6000</span>
-                    </li>
-                </ul>
-            </div><!--col4 end-->
-            <div class="col-sm-4 margin-b-30">
-                <h2>Follow us</h2>
-                <ul class="list-inline clearfix">
-                    <li><a href='#'><i class="fa fa-facebook-official"></i></a></li>
-                    <li><a href='#'><i class="fa fa-twitter"></i></a></li>
-                    <li><a href='#'><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href='#'><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href='#'><i class="fa fa-youtube"></i></a></li>
-                </ul>
-            </div><!--col4 end-->
-        </div><!--row end-->
-        <div class="row">
-            <div class="col-sm-12 text-center">
-                <div class="footer-bottom">
-                    <ul class="list-inline">
-                        <li><a href='#'>Home</a></li>
-                        <li><a href='#'>Terms</a></li>
-                        <li><a href='#'>Privacy</a></li>
+    <!--footer start-->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 margin-b-30">
+                    <h2>Seniority</h2>
+                    <p>
+                        A simple connection between the ones who need help, and that ones that want to help.
+                    </p>
+                    <div class="space-20"></div>
+                </div>
+                <div class="col-sm-4 margin-b-30">
+                    <h2>Contact us</h2>
+                    <ul class="list-unstyled clearfix">
+                        <li class="clearfix">
+                            <i class="fa fa-map-marker"></i>
+                            <span>777 W Harrisburg Pike, Middletown, PA 17057</span>
+                        </li>
+                        <li class="clearfix">
+                            <i class="fa fa-envelope-o"></i>
+                            <span><a href='#'>seniorityPSH@gmail.com</a></span>
+                        </li>
+                        <li class="clearfix">
+                            <i class="fa fa-phone"></i>
+                            <span>(717)-948-6000</span>
+                        </li>
                     </ul>
-                    <span>&copy; Copyright 2017</span>
+                </div>
+                <!--col4 end-->
+                <div class="col-sm-4 margin-b-30">
+                    <h2>Follow us</h2>
+                    <ul class="list-inline clearfix">
+                        <li><a href='#'><i class="fa fa-facebook-official"></i></a></li>
+                        <li><a href='#'><i class="fa fa-twitter"></i></a></li>
+                        <li><a href='#'><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href='#'><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href='#'><i class="fa fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+                <!--col4 end-->
+            </div>
+            <!--row end-->
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <div class="footer-bottom">
+                        <ul class="list-inline">
+                            <li><a href='#'>Home</a></li>
+                            <li><a href='#'>Terms</a></li>
+                            <li><a href='#'>Privacy</a></li>
+                        </ul>
+                        <span>&copy; Copyright 2017</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
-<!--footer end-->
+    </footer>
+    <!--footer end-->
 
-<script>
+    <script>
+        var map, infoWindow;
 
-
-    var map, infoWindow;
-
-    function initMap() {
-        var uluru = {lat:  39.9625980, lng: -76.7277450};
-        map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 17,
-            center: uluru
-        });
-        var marker = new google.maps.Marker({
-            position: {lat: 39.9625982, lng: -76.7277452},
-            map: map,
-            icon: './images/man.png'
-        });
+        function initMap() {
+            var uluru = { lat: 39.9625980, lng: -76.7277450 };
+            map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 17,
+                center: uluru
+            });
+            var marker = new google.maps.Marker({
+                position: { lat: 39.9625982, lng: -76.7277452 },
+                map: map,
+                icon: './images/man.png'
+            });
 
 
-    }
+        }
 
-</script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZn-yqv4oMvIhcaBTqVu9QinJwtTpVMDk&callback=initMap">
-</script>
-<script src="bower_components/axios/dist/axios.js"></script>
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="js/jquery-migrate.min.js" type="text/javascript"></script>
-<script src="js/jquery.easing.1.3.min.js" type="text/javascript"></script>
-<script src="js/jquery.backstretch.min.js" type="text/javascript"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="bower_components/wow/dist/wow.min.js"></script>
-<script src="bower_components/lightbox2/dist/js/lightbox.min.js" type="text/javascript"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="socket_utils.js" type="text/javascript"></script>
-<script src="js/modernizr.custom.97074.js" type="text/javascript"></script>
-<script src="js/parallax.min.js" type="text/javascript"></script>
-<script src="js/custom.js" type="text/javascript"></script>
-<!-- Vimeo video API -->
-<script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
-<script type="text/javascript" src="js/vimeo.js"></script>
-<script src="contact_form/contact.js"></script>
-<!-- Vimeo video API -->
-<script src="js/headroom.js" type="text/javascript"></script>
-<script>
-    $(window).on('load',function(){
-        axios.get('/helper/available/39.9625980/-76.7277450').then(function (response) {
-            console.log(response);
-            response.data.forEach(function(geo){
-                marker = new google.maps.Marker({
-                    position: {lat:geo.location[0] , lng: geo.location[1]},
-                    map: map,
-                    icon: './images/grey.ico'
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZn-yqv4oMvIhcaBTqVu9QinJwtTpVMDk&callback=initMap">
+
+    </script>
+    <script src="bower_components/axios/dist/axios.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="js/jquery-migrate.min.js" type="text/javascript"></script>
+    <script src="js/jquery.easing.1.3.min.js" type="text/javascript"></script>
+    <script src="js/jquery.backstretch.min.js" type="text/javascript"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script src="bower_components/wow/dist/wow.min.js"></script>
+    <script src="bower_components/lightbox2/dist/js/lightbox.min.js" type="text/javascript"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket_utils.js" type="text/javascript"></script>
+    <script src="js/modernizr.custom.97074.js" type="text/javascript"></script>
+    <script src="js/parallax.min.js" type="text/javascript"></script>
+    <script src="js/custom.js" type="text/javascript"></script>
+    <!-- Vimeo video API -->
+    <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
+    <script type="text/javascript" src="js/vimeo.js"></script>
+    <script src="contact_form/contact.js"></script>
+    <!-- Vimeo video API -->
+    <script src="js/headroom.js" type="text/javascript"></script>
+    <script>
+        $(window).on('load', function () {
+            axios.get('/helper/all/39.9625980/-76.7277450').then(function (response) {
+                console.log(response);
+                response.data.forEach(function (geo) {
+                    marker = new google.maps.Marker({
+                        position: { lat: geo.location[0], lng: geo.location[1] },
+                        map: map,
+                        icon: './images/grey.ico'
+                    });
+
                 });
-
             });
         });
-    });
 
-</script>
+    </script>
 </body>
+
 </html>
 
 <!DOCTYPE html>
 <html>
+
 <head>
 
 
 </head>
+
 <body>
 
 </body>
+
 </html>
