--- a/public/login.html
+++ b/public/login.html
@@ -117,6 +117,88 @@
         </div>
     </section>
 
+    <hr>
+    <div class="space-40"></div>
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 center-title">
+            <i class="icon-quote"></i>
+            <h2>Testimonials</h2>
+        </div>
+    </div><!--center title row end-->
+    <div class="row">
+        <div class="col-sm-6 ">
+            <div class="testi-box left clearfix wow animated fadeInDown" data-wow-delay="0.1s">
+                            <span class="thumb">
+                                <img src="images/t-1.jpg" class="img-circle img-responsive" alt="">
+                            </span>
+                <div class="testi-text">
+                    <p>"Seniority has finally given me the piece of mind I never though I would be able to acquire. I can finally sleep at night knowing my mother can get the help she needs at a moment's notice."</p>
+                    <h4>Tyler Durden</h4>
+                    <span class="rating">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </span>
+                </div>
+            </div><!--testi box end-->
+            <div class="testi-box left clearfix wow animated fadeInDown" data-wow-delay="0.2s">
+                            <span class="thumb">
+                                <img src="images/t-2.jpg" class="img-circle img-responsive" alt="">
+                            </span>
+                <div class="testi-text">
+                    <p>"Because of Seniority, I no longer have to make the long trip to my grandmother's house everytime she needs a jar of pickles opened!"</p>
+                    <h4>Betty Hwite</h4>
+                    <span class="rating">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-half-empty"></i>
+                                </span>
+                </div>
+            </div><!--testi box end-->
+        </div><!--col end-->
+        <div class="col-sm-6 ">
+            <div class="testi-box right clearfix wow animated fadeInDown" data-wow-delay="0.3s">
+                            <span class="thumb">
+                                <img src="images/t-2.jpg" class="img-circle img-responsive" alt="">
+                            </span>
+                <div class="testi-text">
+                    <p>"Simple to use and effective. What more can you want? It gives the older generation a chance to get the help they may need on a day-to-day basis."</p>
+                    <h4>Anna Banana</h4>
+                    <span class="rating">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-half-empty"></i>
+                                </span>
+                </div>
+            </div><!--testi box end-->
+            <div class="testi-box right clearfix wow animated fadeInDown" data-wow-delay="0.4s">
+                            <span class="thumb">
+                                <img src="images/t-1.jpg" class="img-circle img-responsive" alt="">
+                            </span>
+                <div class="testi-text">
+                    <p>"Tyler here again! Best app ever! Although I have never used it myself, my mother claims it is simple to use. P.S. Don't talk about fight club!"</p>
+                    <h4>Tyler Durden</h4>
+                    <span class="rating">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </span>
+                </div>
+            </div><!--testi box end-->
+        </div><!--col end-->
+    </div>
+    </div>
+    </section>
+    <!--section features end-->
+
     <!--footer start-->
     <footer class="footer">
         <div class="container">
