--- a/public/register.html
+++ b/public/register.html
@@ -123,7 +123,6 @@
                     <div class="col-sm-8 col-sm-offset-2 center-title">
                         <i class="icon-quote"></i>
                         <h2>Testimonials</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias.</p>
                     </div>
                 </div><!--center title row end-->
                 <div class="row">
@@ -133,14 +132,14 @@
                                 <img src="images/t-1.jpg" class="img-circle img-responsive" alt="">
                             </span>
                             <div class="testi-text">
-                                <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias. "</p>
-                                <h4>John Doe</h4>
+                                <p>"Seniority has finally given me the piece of mind I never though I would be able to acquire. I can finally sleep at night knowing my mother can get the help she needs at a moment's notice."</p>
+                                <h4>Tyler Durden</h4>
                                 <span class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
-                                    <i class="fa fa-star-half-empty"></i>
+                                    <i class="fa fa-star"></i>
                                 </span>
                             </div>
                         </div><!--testi box end-->
@@ -149,8 +148,8 @@
                                 <img src="images/t-2.jpg" class="img-circle img-responsive" alt="">
                             </span>
                             <div class="testi-text">
-                                <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias. "</p>
-                                <h4>John Doe</h4>
+                                <p>"Because of Seniority, I no longer have to make the long trip to my grandmother's house everytime she needs a jar of pickles opened!"</p>
+                                <h4>Betty Hwite</h4>
                                 <span class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -167,8 +166,8 @@
                                 <img src="images/t-2.jpg" class="img-circle img-responsive" alt="">
                             </span>
                             <div class="testi-text">
-                                <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias. "</p>
-                                <h4>John Doe</h4>
+                                <p>"Simple to use and effective. What more can you want? It gives the older generation a chance to get the help they may need on a day-to-day basis."</p>
+                                <h4>Anna Banana</h4>
                                 <span class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -183,14 +182,14 @@
                                 <img src="images/t-1.jpg" class="img-circle img-responsive" alt="">
                             </span>
                             <div class="testi-text">
-                                <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quas necessitatibus nesciunt temporibus, adipisci aliquid inventore et quaerat alias. "</p>
-                                <h4>John Doe</h4>
+                                <p>"Tyler here again! Best app ever! Although I have never used it myself, my mother claims it is simple to use. P.S. Don't talk about fight club!"</p>
+                                <h4>Tyler Durden</h4>
                                 <span class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
-                                    <i class="fa fa-star-half-empty"></i>
+                                    <i class="fa fa-star"></i>
                                 </span>
                             </div>
                         </div><!--testi box end-->
@@ -199,30 +198,6 @@
             </div>
         </section>
         <!--section features end-->
-
-
-
-
-
-        <div class="clients">
-            <div class="container">
-                <ul class="list-inline text-center">
-                    <li><a href="#">
-                    </a></li>
-                    <li><a href="#">
-                    </a></li>
-                    <li><a href="#">
-                    </a></li>
-                    <li><a href="#">
-
-                    </a></li>
-                    <li><a href="#">
-
-                    </a></li>
-                </ul>
-            </div>
-        </div>
-
 
         <!--footer start-->
         <footer class="footer">
